prima abbozza funzionante fiel uwsgi.ini(https-socket)

--- a/conf/web/uwsgi.ini
+++ b/conf/web/uwsgi.ini
@@ -1,7 +1,9 @@
-# mysite_uwsgi.ini file
+ mysite_uwsgi.ini file
 [uwsgi]
 #variables
-projectname = ctf
+projectname = ctf_gameserver
+http-socket = 172.17.0.5:8000
+
 # Django-related settings
 # the base directory (full path)
 base = /opt/ctf
@@ -22,6 +24,10 @@ vacuum          = true
 # Django's wsgi file
 module = django.core.wsgi:get_wsgi_application()
 #module = ctf.src.ctf_gameserver.web.wsgi:application
-plugins = python3
-python-path=/etc/ctf-gameserver/web
-env = DJANGO_SETTINGS_MODULE=%(projectname).conf.web.prod_settings
+#plugins-dir = /usr/lib/uwsgi/plugins
+#plugins-dir = /uwsgi-2.0..22/plugins
+plugins = /usr/lib/uwsgi/plugins/python3_plugin.so
+
+python-path=/usr/local/lib/python3.11/dist-packages/
+env = DJANGO_SETTINGS_MODULE=ctf_gameserver.web.prod_settings
+
