file di configurazione  nginx

--- a/conf/web/nginx.conf
+++ b/conf/web/nginx.conf
@@ -1,11 +1,16 @@
+# the upstream component nginx needs to connect to
+upstream django {
+    server unix:///tmp/ctf_gameserver.sock; # for a file socket
+}
+
 server {
-	listen 80 default_server;
-	listen [::]:80 default_server;
+	listen 80;
+	server_name 172.17.0.5:
 	
 
 
 	location / {
-		include uwsgi_params;
+		include /opt/ctf/conf/web/uwsgi_params;
 		uwsgi_pass unix:/run/uwsgi/app/ctf-gameserver/socket;
 	}
 
