--- a/conf/web/nginx.conf
+++ b/conf/web/nginx.conf
@@ -13,11 +13,11 @@ server {
 		include /opt/ctf/conf/web/uwsgi_params;
 		uwsgi_pass unix:/run/uwsgi/app/ctf-gameserver/socket;
 	}
-
-	location /static/ {
-		alias /usr/local/lib/python3.11/dist-packages/ctf_gameserver/web/static/;
+    
+    location /static/ {
+		alias /opt/ctf/static/;
 	}
 	location /static/admin/ {
-		alias /usr/local/lib/python3.11/dist-packages/django/contrib/admin/static/admin/;
+		alias /opt/ctf/static/admin/;
 	}
 }
