--- a/conf/web/nginx.conf
+++ b/conf/web/nginx.conf
@@ -11,9 +11,9 @@ server {
 
 	location / {
 		include /opt/ctf/conf/web/uwsgi_params;
-		uwsgi_pass unix:/run/uwsgi/app/ctf-gameserver/socket;
+		uwsgi_pass unix:/tmp/ctf-gameserver.sock;
 	}
-    
+
     location /static/ {
 		alias /opt/ctf/static/;
 	}
