--- a/conf/web/uwsgi.ini
+++ b/conf/web/uwsgi.ini
@@ -16,7 +16,7 @@ master          = true
 processes       = 1
 threads = 4
 # the socket (use the full path to be safe
-socket = /run/%(projectname).sock
+socket = /tmp/%(projectname).sock
 # ... with appropriate permissions - may be needed
  chmod-socket    = 664
 # clear environment on exit
