--- a/conf/web/nginx.conf
+++ b/conf/web/nginx.conf
@@ -1,17 +1,15 @@
 # the upstream component nginx needs to connect to
 upstream django {
-    server unix:///tmp/ctf_gameserver.sock; # for a file socket
+    server unix:///run/ctf_gameserver.sock; # for a file socket
 }
 
 server {
 	listen 80;
 	server_name 172.17.0.5:
 	
-
-
 	location / {
 		include /opt/ctf/conf/web/uwsgi_params;
-		uwsgi_pass unix:/tmp/ctf-gameserver.sock;
+		uwsgi_pass unix:/run/ctf_gameserver.sock;
 	}
 
     location /static/ {
