conf-systemd-controller

--- a/conf/controller/controller.env
+++ b/conf/controller/controller.env
@@ -1,2 +1,5 @@
-CTF_DBNAME="DUMMY"
-CTF_DBUSER="DUMMY"
+CTF_LOG_LEVEL="INFO"
+CTF_DBHOST="10.20.0.1"
+CTF_DBNAME="faustctf"
+CTF_DBUSER="gameserver_controller"
+CTF_DBPASSWORD="password" 
