--- a/conf/checker/checkermaster.env
+++ b/conf/checker/checkermaster.env
@@ -1,6 +1,8 @@
-CTF_DBNAME="DUMMY"
-CTF_DBUSER="DUMMY"
-
-CTF_SUDOUSER="ctf-checkerrunner"
-CTF_IPPATTERN="0.0.%s.2"
-CTF_FLAGSECRET="RFVNTVlTRUNSRVQ="
+CTF_LOG_LEVEL="INFO"
+CTF_DBHOST="10.20.0.1"
+CTF_DBNAME="faustctf"
+CTF_DBUSER="gameserver_checkermaster"
+CTF_DBPASSWORD="password" 
+CTF_IPPATTERN="10.60.%s.1"
+CTF_FLAGSECRET="U29tZSBzdHJpbmcgZXhhbXBsZSBiYXNlNjQgc3RyaW5n"
+CTF_METRICS_LISTEN="172.17.0.2:8080"
