--- a/conf/checker/ctf-checkermaster@.service
+++ b/conf/checker/ctf-checkermaster@.service
@@ -7,6 +7,7 @@ Type=notify
 User=ctf-checkermaster
 EnvironmentFile=/etc/ctf-gameserver/checkermaster/checkermaster.env
 EnvironmentFile=-/etc/ctf-gameserver/checker/%i.env
+StandardOutput=journal
 ExecStart=/usr/local/bin/ctf-checkermaster
 # Allow waiting for Checker Scripts to finish
 TimeoutStopSec=90
