--- a/conf/web/nginx.conf
+++ b/conf/web/nginx.conf
@@ -1,6 +1,6 @@
 # the upstream component nginx needs to connect to
 upstream django {
-    server unix:///run/ctf_gameserver.sock; # for a file socket
+    server unix:///tmp/ctf_gameserver.sock; # for a file socket
 }
 
 server {
@@ -9,7 +9,7 @@ server {
 	
 	location / {
 		include /opt/ctf/conf/web/uwsgi_params;
-		uwsgi_pass unix:/run/ctf_gameserver.sock;
+		uwsgi_pass unix:/tmp/ctf_gameserver.sock;
 	}
 
     location /static/ {
