--- a/conf/submission/submission.env
+++ b/conf/submission/submission.env
@@ -1,5 +1,26 @@
-CTF_DBNAME="DUMMY"
-CTF_DBUSER="DUMMY"
+# Log level
+CTF_LOGLEVEL=INFO
 
-CTF_FLAGSECRET="RFVNTVlTRUNSRVQ="
-CTF_TEAMREGEX="^0\.0\.(\d+)\.\d+$"
+# Address and port to listen on
+CTF_LISTEN=10.10.0.2:8000
+
+# Base64 string used as secret in flag generation
+CTF_FLAGSECRET=U29tZSBzdHJpbmcgZXhhbXBsZSBiYXNlNjQgc3RyaW5n
+
+# Python regex (with match group) to extract team net number from connecting IP address
+CTF_TEAMREGEX=10\.60\.(\d+)\.1
+
+# Hostname of the database
+CTF_DBHOST=10.20.0.1
+
+# Name of the used database
+CTF_DBNAME=faustctf
+
+# User name for database access
+CTF_DBUSER=gameserver_submission
+
+# Password for database access if needed
+CTF_DBPASSWORD=password
+
+# Expose Prometheus metrics via HTTP
+CTF_METRICS_LISTEN=0.0.0.0:8080
