--- a/conf/web/nginx.conf
+++ b/conf/web/nginx.conf
@@ -5,7 +5,7 @@ upstream django {
 
 server {
 	listen 8000;
-	server_name 172.17.0.2:
+	server_name 172.17.0.2;
 	
 	location / {
 		include /opt/ctf/conf/web/uwsgi_params;
