rimosso modulo journal

--- a/conf/checker/checkermaster.env
+++ b/conf/checker/checkermaster.env
@@ -4,5 +4,5 @@ CTF_DBNAME="faustctf"
 CTF_DBUSER="gameserver_checkermaster"
 CTF_DBPASSWORD="password" 
 CTF_IPPATTERN="10.60.%s.1"
-CTF_FLAGSECRET="U29tZSBzdHJpbmcgZXhhbXBsZSBiYXNlNjQgc3RyaW5n"
-CTF_METRICS_LISTEN="172.17.0.2:8080"
+CTF_FLAGSECRET="U29tZSBzdHJpbmcgZXhh"
+CTF_METRICS_LISTEN="172.17.0.2:8070"
