rimosso modulo journal

--- a/conf/checker/fittyfit.env
+++ b/conf/checker/fittyfit.env
@@ -2,5 +2,5 @@ CTF_SERVICE="fittyfit"
 CTF_CHECKERSCRIPT="/opt/services/fitty_fit/checker/mychecker.py"
 CTF_CHECKERCOUNT="5"
 CTF_INTERVAL="50"
-CTF_JOURNALD="yes"
+CTF_JOURNALD="no"
 
